Добавлен SynchromizedList. Исправлена ошибка при отключении клиента.